# cs184-final-project

./: CMakeLists.txt  CMakeLists_dualOS.txt  README.md  install_dependencies.sh  mac.sh
.cache/clangd/index/: camera.cpp.4DA5C51122DCE1F5.idx  camera.h.A84EA916A06BAC54.idx  imconfig.h.BC23089061AE0604.idx  imgui.cpp.DC0367E6EB94D235.idx  imgui.h.1B6FD713058DD877.idx  imgui_demo.cpp.260A82724237D40F.idx  imgui_draw.cpp.C6DFE630012BE08C.idx  imgui_impl_glfw.cpp.7224E010EC7B4F9D.idx  imgui_impl_glfw.h.59EA3B8474B44C28.idx  imgui_impl_opengl3.cpp.D3A5DBDF2F6D49C7.idx  imgui_impl_opengl3.h.CF3E6BEBDA0C62DB.idx  imgui_impl_opengl3_loader.h.55E16A58E27F79C6.idx  imgui_internal.h.38EF2D2654D7CCF1.idx  imgui_tables.cpp.C68D8ADD7B6FB96E.idx  imgui_widgets.cpp.042BD8036D0DE31D.idx  imstb_rectpack.h.EA681247AB51CFBB.idx  imstb_textedit.h.EBDFB84B0D8FD87C.idx  imstb_truetype.h.1802F013F2DE8460.idx  main.cpp.1E783BD1D76914DD.idx  mesh.cpp.3F60E130F8AD1153.idx  mesh.h.5F9D615E515EFDEA.idx  model.cpp.CF062E9D28270B63.idx  model.h.7835D499127D4592.idx  shader.cpp.82CF1BF1F6CEBFCA.idx  shader.h.4F2D36B39AD10FE6.idx  stb_image.cpp.29A3D6CD7A12170D.idx  stb_image.h.0A37206D234071BD.idx  texture.cpp.0AFE0B9B57ECE637.idx  texture.h.0DED3F1A445CEAA9.idx  transform.cpp.739309DBA8C86A7D.idx  transform.h.B6E7F29518A050D2.idx
shaders/: Cel.frag  Outline.frag  Outline.vert  Sketch.frag  Watercolor.frag  grid.frag  grid.vert  standard.frag
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/shaders/: Sktech.frag  Watercolor.frag
